Fix typo in notebook title

--- a/QSAR_demo_Influenza_B.ipynb
+++ b/QSAR_demo_Influenza_B.ipynb
@@ -5,7 +5,7 @@
    "id": "informal-style",
    "metadata": {},
    "source": [
-    "# Fingerprint-based activty prediction demo for Influenza B inhibitors"
+    "# Fingerprint-based activity prediction demo for Influenza B inhibitors"
    ]
   },
   {
